Added support for multiple filter arguments on each column. Added mock data for initial database seeding.
Upgraded to .NET 8.

DataTable now contains support for:
- Specifying default sort order.
- Defining column names for each property.
- Setting the CSS class specific to each row.

--- a/FilterTable/DataFilter.razor
+++ b/FilterTable/DataFilter.razor
@@ -2,12 +2,12 @@
 @typeparam T
 
 <nobr>
-	<select class="no-arrow" @bind="Operator" @attributes=@InputAttributes>
+	<select class="no-arrow" @bind="FilterOperation.Operator" @attributes=@InputAttributes>
 	@foreach(FilterOperators currentOperator in Operators)
 	{
 		<option value="@currentOperator">@currentOperator.StringFormat()</option>
 	}
 </select>
 	@* The input box will have the " invalid" class applied if the filter string isn't empty or valid. *@
-	<input class="column-filter@((FilterEmpty || FilterValid) ? "" : " invalid")" type="text" @bind="FilterString" />
+	<input class="column-filter@((FilterEmpty || FilterValid) ? "" : " invalid")" type="text" @bind="FilterOperation.Value" />
 </nobr>
