--- a/BlazorLogViewer/wwwroot/css/app.css
+++ b/BlazorLogViewer/wwwroot/css/app.css
@@ -135,3 +135,20 @@ input.column-filter {
 	flex-basis: auto;
 	overflow: hidden;
 }
+
+.data-table-header-column {
+	flex-direction: column;
+	align-items: start;
+}
+
+.data-filter {
+	width: 100%;
+}
+
+.max-width {
+	width: 100%;
+}
+
+table > thead > tr > th.data-table-header {
+	vertical-align:top;
+}
