Date format now 24H instead of 12h.
DataTable's LoadData method can now be canceled, to abort an active search when starting a new search.

Default filter operators now work.

Added a default filter to the LogEntriesTable page, to demonstrate how to add default filters.

Filter select control now has a transparent background.

--- a/FilterTable/DataFilter.razor.css
+++ b/FilterTable/DataFilter.razor.css
@@ -1,6 +1,16 @@
 ﻿div.data-filter {
 }
 
+/* Override browser's default color */
+div.data-filter > nobr > select {
+	background-color: transparent;
+	min-width: 2em;
+}
+
+::deep select.no-arrow {
+	appearance: none;
+}
+
 ::deep .column-filter {
 	border-bottom-width: 1px;
 	border-color: #DADADA;
